--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "^5.0",
+        "symfony/maker-bundle": "^1.20",
         "symfony/monolog-bundle": "^3.0",
         "symfony/stopwatch": "^5.0",
         "symfony/twig-bundle": "^5.0",
